:heavy_plus_sign: Added ExpandableView dep
https://github.com/cachapa/ExpandableLayout

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,7 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.2"
     implementation "androidx.navigation:navigation-ui-ktx:2.3.2"
 
+    //ExpandableView
+    implementation 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
+
 }
